--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,5 +66,5 @@ services:
       - ./docker/drone-runner/.env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    ports:
-      - 83:3000
+    expose:
+      - 3000
