--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - 5432:5432
 
-  api:
+  dive-site-russia-api:
     build:
       context: ../dive-site-russia-api
       dockerfile: Dockerfile
@@ -24,7 +24,7 @@ services:
     depends_on:
       - postgres
 
-  frontend:
+  dive-site-russia-frontend:
     build:
       context: ../dive-site-russia-frontend
       dockerfile: Dockerfile
@@ -34,17 +34,17 @@ services:
     expose:
       - 3000
     depends_on:
-      - api
+      - dive-site-russia-api
 
   nginx:
     image: nginx:1.19.4
     restart: unless-stopped
     volumes:
-      - ../dive-site-russia-api/public:/var/www/api/public
+      - ../dive-site-russia-api/public:/var/www/dive-site-russia-api/public
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
       - 81:81
     depends_on:
-      - api
-      - frontend
+      - dive-site-russia-api
+      - dive-site-russia-frontend
