--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -7,17 +7,17 @@ map $sent_http_content_type $expires {
 server {
     listen 80;
 
-    error_log  /var/log/nginx/api-error.log;
+    error_log  /var/log/nginx/dive-site-russia-api-error.log;
     access_log off;
 
-    root /var/www/api/public;
+    root /var/www/dive-site-russia-api/public;
 
     index index.php;
 
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass api:9000;
+        fastcgi_pass dive-site-russia-api:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -32,7 +32,7 @@ server {
 server {
     listen 81;
 
-    error_log  /var/log/nginx/frontend-error.log;
+    error_log  /var/log/nginx/dive-site-russia-frontend-error.log;
     access_log off;
 
     gzip on;
@@ -49,6 +49,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 1m;
         proxy_connect_timeout 1m;
-        proxy_pass http://frontend:3000;
+        proxy_pass http://dive-site-russia-frontend:3000;
     }
 }
