--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,9 +6,28 @@ map $sent_http_content_type $expires {
 
 server {
     listen 80;
+    server_name diving.place www.diving.place api.diving.place storage.diving.place;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /etc/letsencrypt/www;
+    }
+}
+
+server {
+    listen 443;
+    server_name api.diving.place;
 
     error_log  /var/log/nginx/dive-site-russia-api-error.log;
     access_log off;
+
+    ssl_certificate /etc/letsencrypt/live/diving.place/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/diving.place/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/dhparam.pem;
 
     root /var/www/dive-site-russia-api/public;
 
@@ -30,7 +49,13 @@ server {
 }
 
 server {
-    listen 81;
+    listen 443;
+    server_name diving.place www.diving.place;
+
+    ssl_certificate /etc/letsencrypt/live/diving.place/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/diving.place/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/dhparam.pem;
 
     error_log  /var/log/nginx/dive-site-russia-frontend-error.log;
     access_log off;
