--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -18,7 +18,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name api.diving.place;
 
     error_log  /var/log/nginx/dive-site-russia-api-error.log;
@@ -49,7 +49,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name diving.place www.diving.place;
 
     ssl_certificate /etc/letsencrypt/live/diving.place/fullchain.pem;
